[package]
name = "zzh-bus-analyzer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.24.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
humantime = "2.1.0"
log = "0.4.21"
pnet = { path = "../libpnet" }
