[package]
name = "someip-message-parser"
authors = ["AmnesiaBeing <727184139@qq.com>"]
description = "parse message form someip packets"
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.25.0"
clap = { version = "4.5.7", features = ["cargo"] }
crossbeam-channel = "0.5.13"
env_logger = "0.11.3"
log = "0.4.21"
pnet = { version = "0.35.0", features = ["pcap"] }
pnet_macros = "0.35.0"
pnet_macros_support = "0.35.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.63"
